Fixes overflow on mobile devices.

--- a/styles.styl
+++ b/styles.styl
@@ -16,7 +16,7 @@ body
   bottom 0
   height 100vh
   position relative
-  width 100%
+  width 100vw
   
 .page
   align-items center
@@ -26,6 +26,7 @@ body
   // grid-template-areas "c1r1 c2r1 c3r1 c4r1 c5r1"  "c1r2 c2r2 c3r2 c4r2 c5r2" "c1r3 c2r3 c3r3 c4r3 c5r3"
   height 100vh
   justify-items center
+  overflow hidden
   position absolute
   width 100%
   &:nth-child(1)
@@ -113,7 +114,6 @@ body
   &#birds
     grid-column 10/12
   &#forest
-    overflow hidden
     position absolute
     bottom -5%
     & img 
